<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/tv_baslik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/hint"
            android:textColorHint="@color/hint"
            android:textSize="50sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="5dp"

            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            android:textColorHint="@color/hint"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="5dp"

            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="120dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/surname"
            android:inputType="text"
            android:textColorHint="@color/hint"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="250dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:layout_weight="1"
            android:backgroundTint="@color/hint"
            android:text="@string/btn_start"
            android:textSize="25sp" />



</LinearLayout>