<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PersonalInfo.PersonalInfoFragment">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:gravity="right"
        android:text="TextView"
        android:textColor="@color/hint"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/mail"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="e-mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/phone"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="05070000000"
        android:inputType="phone"
        android:maxLength="11" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/city"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/live"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:inputType="text" />


    <Button
        android:id="@+id/btn_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/hint"
        android:text="@string/btn_continue" />


</LinearLayout>