<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.custom.CustomFragment">

    <TextView
        android:id="@+id/tv_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"

        android:gravity="right"
        android:text="TextView"
        android:textColor="@color/hint"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_football"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="110dp"
        android:text="@string/football"
        android:textColor="@color/hint" />

    <EditText
        android:id="@+id/et_football"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="EVET/HAYIR"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_feelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/feeling"
        android:textColor="@color/hint" />

    <EditText
        android:id="@+id/et_feelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="EVET/HAYIR"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:text="@string/social"
        android:textColor="@color/hint" />

    <EditText
        android:id="@+id/et_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="EVET/HAYIR"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/hint"
        android:text="@string/btn_continue" />
</LinearLayout>